Overall UI overhaul + improved features in alternatives tab
